--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^2.0.0
+  splashscreen: ^1.3.5
+  flutter_easyloading: ^3.0.5
+  shared_preferences: ^2.0.15
+  http: ^0.13.5
+  platform_device_id: ^1.0.1
 
 dev_dependencies:
   flutter_test:
